--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ window.onload = wrap_img;
           </span>
         </label>
 
-        <div class="trigger"><a class="page-link" href="/hayabusa/about/">About Me</a><a class="page-link" href="/hayabusa/search/">Search</a><a class="page-link" href="/hayabusa/categories/">Tags</a></div>
+        <div class="trigger"><a class="page-link" href="/hayabusa/about/">About</a><a class="page-link" href="/hayabusa/search/">Search</a><a class="page-link" href="/hayabusa/categories/">Tags</a></div>
       </nav></div>
 </header>
 <main class="page-content" aria-label="Content">
